# dealer

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-docker.yml  test.yml
dealer/: deck.py  poker_deck.py
tests/: test_dealer.py
