[project]
name = "dealer"
version = "0.0.1"
authors = [
  { name="S Laubacher", email="salaubacher@gmail.com"}
]
description = "A library to shuffle and deal a deck of poker cards"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
 ]
[project.urls]
"Homepage" = "https://github.com/salaubacher/dealer"
"Bug Tracker" = "https://github.com/salaubacher/dealer/issues"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.pytest.ini_options]
pythonpath = [
  ".", "app"
]
[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | bin
  | docs
)/
'''
